--- a/Flask-IoT-Dashboard-master/templates/Login.html
+++ b/Flask-IoT-Dashboard-master/templates/Login.html
@@ -24,10 +24,9 @@
 <body>
 	
 	<div class="limiter">
-		<div class="container-login100">
-			<div class="wrap-login100">
+		<div class="container-login100" >
+			<div class="wrap-login100"style="background-color:white;">
 				<div class="login100-pic js-tilt" data-tilt>
-					<img src="/static/images/img-01.png" alt="IMG">
 				</div>
 
 				<form action="" method="POST" class="login100-form validate-form">
