--- a/Flask-IoT-Dashboard-master/templates/overview.html
+++ b/Flask-IoT-Dashboard-master/templates/overview.html
@@ -1,134 +1,137 @@
 <!DOCTYPE html>
 <html>
-  {% if title %}
-  <title>{{ title }} - ARMS</title>
-  {% else %}
-  <title>Welcome to ARMS</title>
-  {% endif %}
+{% if title %}
+<title>{{ title }} - ARMS</title>
+{% else %}
+<title>Welcome to ARMS</title>
+{% endif %}
 
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- <meta http-equiv="refresh" content="5" > -->
-  <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-  
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- <meta http-equiv="refresh" content="5" > -->
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="/static/css/main.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.bundle.js" integrity="sha256-8zyeSXm+yTvzUN1VgAOinFgaVFEFTyYzWShOy9w7WoQ=" crossorigin="anonymous"></script>
+<script src="/static/JS/chart_data.js"> </script>
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.bundle.js"
+  integrity="sha256-8zyeSXm+yTvzUN1VgAOinFgaVFEFTyYzWShOy9w7WoQ=" crossorigin="anonymous"></script>
+
+
 
 <style>
-html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
+  html,
+  body,
+  h1,
+  h2,
+  h3,
+  h4,
+  h5 {
+    font-family: "Raleway", sans-serif
+  }
 </style>
+
 <body class="w3-light-grey">
 
-<!-- Top container -->
-<div class="w3-bar w3-top w3-black w3-large" style="z-index:4">
-  <button class="w3-bar-item w3-button w3-hide-large w3-hover-none w3-hover-text-light-grey" onclick="w3_open();"><i class="fa fa-bars"></i>  Menu</button>
-  <span class="w3-bar-item w3-right">ARMS</span>
-  <input type="hidden" id="apikey" value="{{ user.api }}">
-</div>
-
-<!-- Sidebar/menu -->
-<nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
-  <div class="w3-container w3-row">
-    <div class="w3-col s4">
-      <img src="{{ user.image }}" class="w3-circle w3-margin-right" style="width:46px">
-    </div>
-    <div class="w3-col s8 w3-bar">
-      <span>Welcome, <strong>{{ user.username }}</strong></span><br>
-      <a href="#" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i></a>
-      <a href="#" class="w3-bar-item w3-button"><i class="fa fa-user"></i></a>
-      <a href="#" class="w3-bar-item w3-button"><i class="fa fa-cog"></i></a>
-    </div>
+  <!-- Top container -->
+  <div class="w3-bar w3-top w3-black w3-large" style="z-index:4">
+    <button class="w3-bar-item w3-button w3-hide-large w3-hover-none w3-hover-text-light-grey" onclick="w3_open();"><i
+        class="fa fa-bars"></i>  Menu</button>
+    <span class="w3-bar-item w3-right">Iot-Chatbot</span>
+    <input type="hidden" id="apikey" value="{{ user.api }}">
   </div>
-  <hr>
-  <div class="w3-container">
-    <h5>Dashboard</h5>
-  </div>
-  <div class="w3-bar-block">
-    <a href="#" class="w3-bar-item w3-button w3-padding-16 w3-hide-large w3-white w3-hover-black" onclick="w3_close()" title="close menu"><i class="fa fa-remove fa-fw"></i>  Close Menu</a>
-    <a href="/overview/{{ user.username }}/{{ user.session }}" class="w3-bar-item w3-button w3-padding w3-blue"><i class="fa fa-users fa-fw"></i>  Overview</a>
 
-    {% for device in devices %}
+  <!-- Sidebar/menu -->
+  <nav class="w3-sidebar w3-collapse w3-white w3-right" style="width:50%;height:100vh; position: fixed;top:100px;right: -1px;" id="mySidebar"><br>
+  
 
-    <!-- <a href="{{ device.Dashboard }}" class="w3-bar-item w3-button w3-padding"> <img src="/static/images/bio-sensor.svg"> {{ device.deviceID }}</a> -->
-    
-    {% endfor %}
-
-    <!-- <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-eye fa-fw"></i>  Field device Controls</a> -->
-    <a href="/apisettings/{{ user.username }}/{{ user.session }}" class="w3-bar-item w3-button w3-padding"><i class="fa fa-users fa-fw"></i>  API settings</a>
-    <!-- <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-bullseye fa-fw"></i>  Device Manager</a> -->
-    <a href="/profile/{{ user.username }}/{{ user.session }}" class="w3-bar-item w3-button w3-padding"><i class="fa fa-cog fa-fw"></i>  Profile Settings</a><br><br>
-  </div>
+      
 </nav>
 
 
-<!-- Overlay effect when opening sidebar on small screens -->
-<div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
+  <!-- Overlay effect when opening sidebar on small screens -->
+  <!-- <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer"
+    title="close side menu" id="myOverlay"></div> -->
 
-<!-- !PAGE CONTENT! -->
-<div class="w3-main" style="margin-left:300px;margin-top:43px;">
+  <!-- !PAGE CONTENT! -->
 
-  <!-- Header -->
-  <header class="w3-container" style="padding-top:22px">
-    <h5><b><i class="fa fa-dashboard"></i> My Dashboard</b></h5>
-  </header>
+  <div class="w3-main" style="margin-left:10px;margin-top:43px;">
 
-  <div class="w3-row-padding w3-margin-bottom">
-    <div class="w3-quarter">
-      <div class="w3-container w3-white w3-hover-shadow w3-border-red w3-bottombar w3-padding-16">
-        <div class="w3-left"><img src="/static/images/temperature.svg"></div>
-        <div class="w3-right">
-          <h3  id = "card-temp"><div id="temp"></div></h3>
-        </div>
-        
-        <div class="w3-clear"></div>
-        <h4>Temperature</h4>
-      </div>
-    </div>
-    <div class="w3-quarter">
-      <div class="w3-container w3-white w3-hover-shadow w3-border-blue w3-bottombar w3-padding-16">
-        <div class="w3-left"><img src="/static/images/grass.svg"></div>
-        <div class="w3-right">
-          <h3 id = "card-moisture"><div id="moist"></div></h3>
-        </div>
-        <div class="w3-clear"></div>
-        <h4>Moisture</h4>
-      </div>
-    </div>
-    <div class="w3-quarter">
-      <div class="w3-container w3-white w3-hover-shadow w3-border-teal w3-bottombar w3-padding-16">
-        <div class="w3-left"><img src="/static/images/humidity.svg"></div>
-        <div class="w3-right">
-          <h3 id ="card-humidity"><div id="hum"></div></h3>
-        </div>
-        <div class="w3-clear"></div>
-        <h4>Humidity</h4>
-      </div>
-    </div>
-    <div class="w3-quarter">
-      <div class="w3-container w3-white w3-hover-shadow w3-border-orange w3-bottombar w3-padding-16">
-        <div class="w3-left"><img src="/static/images/ecology.svg"></div>
-        <div class="w3-right">
-          <h3 id = "card-light"><div id="lig"></div></h3>
-        </div>
-        <div class="w3-clear"></div>
-        <h4>Lights</h4>
-      </div>
-    </div>
-  </div>
-
-<div class="w3-panel w3-padding-large">
-  <div class="w3-container w3-white w3-card w3-hover-shadow w3-section w3-round-large">
-    <h3>
-      Temperature
-    </h3> 
-    <canvas id="temperature" ></canvas>
-    </div>
-
+    <!-- Header -->
+    <header class="w3-container" style="padding-top:22px">
+      <h5><b><i class="fa fa-dashboard"></i> My Dashboard</b></h5>
+    </header>
     
-    <!-- <div class="w3-container w3-white w3-card w3-hover-shadow w3-section w3-round-large">
+      <div style="display: flex;justify-content: center;flex-direction: column;">
+        <div class="w3-margin-bottom"></div>
+        <div class="w3-quarter">
+          <div class="w3-container w3-white w3-hover-shadow w3-border-red w3-bottombar w3-padding-16"
+            style="margin-bottom:10px;">
+            <div class="w3-right"><img src="/static/images/temperature.svg"></div>
+            <div class="w3-right">
+              <h3 id="card-temp">
+                <div id="temp"></div>
+              </h3>
+            </div>
+
+            <div class="w3-clear"></div>
+            <h4>Temperature</h4>
+          </div>
+        </div>
+        <div class="w3-quarter">
+          <div class="w3-container w3-white w3-hover-shadow w3-border-blue w3-bottombar w3-padding-16"
+            style="margin-bottom:10px;">
+            <div class="w3-left"><img src="/static/images/grass.svg"></div>
+            <div class="w3-right">
+              <h3 id="card-moisture">
+                <div id="moist"></div>
+              </h3>
+            </div>
+            <div class="w3-clear"></div>
+            <h4>Moisture</h4>
+          </div>
+        </div>
+        <div class="w3-quarter">
+          <div class="w3-container w3-white w3-hover-shadow w3-border-teal w3-bottombar w3-padding-16"
+            style="margin-bottom:10px;">
+            <div class="w3-left"><img src="/static/images/humidity.svg"></div>
+            <div class="w3-right">
+              <h3 id="card-humidity">
+                <div id="hum"></div>
+              </h3>
+            </div>
+            <div class="w3-clear"></div>
+            <h4>Humidity</h4>
+          </div>
+        </div>
+        <div class="w3-quarter">
+          <div class="w3-container w3-white w3-hover-shadow w3-border-orange w3-bottombar w3-padding-16"
+            style="margin-bottom:10px;">
+            <div class="w3-left"><img src="/static/images/ecology.svg"></div>
+            <div class="w3-right">
+              <h3 id="card-light">
+                <div id="lig"></div>
+              </h3>
+            </div>
+            <div class="w3-clear"></div>
+            <h4>Lights</h4>
+          </div>
+        </div>
+
+        
+    </div>
+    </div>
+    </body>
+      <!-- chatbot  -->
+
+
+      <!--     
+    <div class="w3-container w3-white w3-card w3-hover-shadow w3-section w3-round-large">
       <h3>
         Humidity
       </h3> 
@@ -147,39 +150,43 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         Light Intensity
       </h3> 
       <canvas id="light" ></canvas>
-    </div> -->
+    </div>
 
-</div>
-  
+</div> -->
 
- 
+
+</html>
+
 
 <script>
-// Get the Sidebar
-var mySidebar = document.getElementById("mySidebar");
+  // Get the Sidebar
+  var mySidebar = document.getElementById("mySidebar");
 
-// Get the DIV with overlay effect
-var overlayBg = document.getElementById("myOverlay");
+  // Get the DIV with overlay effect
+  var overlayBg = document.getElementById("myOverlay");
 
-// Toggle between showing and hiding the sidebar, and add overlay effect
-function w3_open() {
-  if (mySidebar.style.display === 'block') {
-    mySidebar.style.display = 'none';
-    overlayBg.style.display = "none";
-  } else {
-    mySidebar.style.display = 'block';
-    overlayBg.style.display = "block";
+  // Toggle between showing and hiding the sidebar, and add overlay effect
+  function w3_open() {
+    if (mySidebar.style.display === 'block') {
+      mySidebar.style.display = 'none';
+      overlayBg.style.display = "none";
+    } else {
+      mySidebar.style.display = 'block';
+      overlayBg.style.display = "block";
+    }
   }
-}
 
-// Close the sidebar with the close button
-function w3_close() {
-  mySidebar.style.display = "none";
-  overlayBg.style.display = "none";
-}
+  // Close the sidebar with the close button
+  function w3_close() {
+    mySidebar.style.display = "none";
+    overlayBg.style.display = "none";
+  }
+  var username = "{{user.username}}"
+  console.log(username);
+  myfunc(username);
 </script>
 
-<script src="/static/JS/chart_data.js"> </script>
 
 </body>
+
 </html>
