--- a/IotChatbot/templates/Login.html
+++ b/IotChatbot/templates/Login.html
@@ -26,7 +26,7 @@
 
 				<form action="" method="POST" class="login100-form validate-form">
 					<span class="login100-form-title">
-						Member Login
+						IoT-Chatbot Dashboard Login
 					</span>
 					<span class="txt1" style="color: red;">{{ error }}</span>
 
