--- a/IotChatbot/templates/overview.html
+++ b/IotChatbot/templates/overview.html
@@ -22,6 +22,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Nageshbansal/css_js/style.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Nageshbansal/css_js/util.css">
+  <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.bundle.js"
   integrity="sha256-8zyeSXm+yTvzUN1VgAOinFgaVFEFTyYzWShOy9w7WoQ=" crossorigin="anonymous"></script>
@@ -116,7 +117,7 @@
       <div class="w3-quarter">
         <div class="w3-container w3-white w3-hover-shadow w3-border-orange w3-bottombar w3-padding-16"
           style="margin-bottom:10px;">
-          <div class="w3-left"><img src="/static/images/icons8-light-96.png"></div>
+          <div class="w3-left"><i class='fas fa-lightbulb' style='font-size:48px;color:red'></i></div>
           <div class="w3-right">
             <h3 id="card-light">
               <div id="lig"></div>
