--- a/IotChatbot/templates/overview.html
+++ b/IotChatbot/templates/overview.html
@@ -117,7 +117,7 @@
       <div class="w3-quarter">
         <div class="w3-container w3-white w3-hover-shadow w3-border-orange w3-bottombar w3-padding-16"
           style="margin-bottom:10px;">
-          <div class="w3-left"><i class='fas fa-lightbulb' style='font-size:48px;color:red'></i></div>
+          <div class="w3-left"><img src="https://static.vecteezy.com/system/resources/previews/000/554/427/original/lightbulb-vector-icon.jpg" style="width:80px;height:80px"></div>
           <div class="w3-right">
             <h3 id="card-light">
               <div id="lig"></div>
