--- a/IotChatbot/templates/overview.html
+++ b/IotChatbot/templates/overview.html
@@ -77,7 +77,7 @@
       <div class="w3-quarter">
         <div class="w3-container w3-white w3-hover-shadow w3-border-red w3-bottombar w3-padding-16"
           style="margin-bottom:10px;">
-          <div class="w3-right"><img src="/static/images/temperature.svg"></div>
+          <div class="w3-right"><img src="https://static.vecteezy.com/system/resources/previews/000/442/462/non_2x/temperature-vector-icon.jpg"style="height: 80px;"></div>
           <div class="w3-right">
             <h3 id="card-temp">
               <div id="temp"></div>
@@ -91,7 +91,7 @@
       <div class="w3-quarter">
         <div class="w3-container w3-white w3-hover-shadow w3-border-blue w3-bottombar w3-padding-16"
           style="margin-bottom:10px;">
-          <div class="w3-left"><img src="/static/images/fan.jpg" style="height: 80px;"></div>
+          <div class="w3-left"><img src="https://static.vecteezy.com/system/resources/previews/000/356/035/original/charging-fan-vector-icon.jpg" style="height: 80px;"></div>
           <div class="w3-right">
             <h3 id="card-fan">
               <div id="fan"></div>
@@ -104,7 +104,7 @@
       <div class="w3-quarter">
         <div class="w3-container w3-white w3-hover-shadow w3-border-teal w3-bottombar w3-padding-16"
           style="margin-bottom:10px;">
-          <div class="w3-left"><img src="/static/images/humidity.svg"></div>
+          <div class="w3-left"><img src="https://static.vecteezy.com/system/resources/previews/000/439/928/original/vector-humidity-vetor-icon.jpg"style="height:80px;"></div>
           <div class="w3-right">
             <h3 id="card-humidity">
               <div id="hum"></div>
