--- a/IotChatbot/templates/overview.html
+++ b/IotChatbot/templates/overview.html
@@ -94,7 +94,7 @@
           <div class="w3-right"><img src="https://static.vecteezy.com/system/resources/previews/000/349/850/non_2x/ac-vector-icon.jpg"style="height: 80px;"></div>
           <div class="w3-right">
             <h3 id="card-temp">
-              <div id="temp"></div>
+              <div id="ac"></div>
             </h3>
           </div>
 
