--- a/IotChatbot/templates/overview.html
+++ b/IotChatbot/templates/overview.html
@@ -88,7 +88,7 @@
           <h4>Temperature</h4>
         </div>
       </div>
-        <div class="w3-quarter">
+<!--         <div class="w3-quarter">
         <div class="w3-container w3-white w3-hover-shadow w3-border-red w3-bottombar w3-padding-16"
           style="margin-bottom:10px;">
           <div class="w3-right"><img src="https://static.vecteezy.com/system/resources/previews/000/349/850/non_2x/ac-vector-icon.jpg"style="height: 80px;"></div>
@@ -101,7 +101,7 @@
           <div class="w3-clear"></div>
           <h4>Air Conditioner</h4>
         </div>
-      </div>
+      </div> -->
       <div class="w3-quarter">
         <div class="w3-container w3-white w3-hover-shadow w3-border-blue w3-bottombar w3-padding-16"
           style="margin-bottom:10px;">
